fix timeline animation direction on mobile

--- a/css/vertical-timeline.scss
+++ b/css/vertical-timeline.scss
@@ -23,7 +23,7 @@
 	}
 
 	&::before {
-		/* this is the vertical line */
+		// this is the vertical line
 		content: '';
 		position: absolute;
 		top: 0;
@@ -205,12 +205,6 @@ html.cssanimations {
 		.hide-timeline {
 			visibility: hidden;
 		}
-		&:nth-child(even) .cd-timeline-content.bounce-in {
-			-webkit-animation: cd-bounce-2-inverse 0.6s;
-			-moz-animation: cd-bounce-2-inverse 0.6s;
-			animation: cd-bounce-2-inverse 0.6s;
-		}
-
 		.cd-timeline-img.bounce-in {
 			visibility: visible;
 			-webkit-animation: cd-bounce-1 0.6s;
@@ -225,9 +219,16 @@ html.cssanimations {
 		}
 		.cd-timeline-content.bounce-in {
 			visibility: visible;
-			-webkit-animation: cd-bounce-2 0.6s;
-			-moz-animation: cd-bounce-2 0.6s;
-			animation: cd-bounce-2 0.6s;
+			-webkit-animation: cd-bounce-2-inverse 0.6s;
+			-moz-animation: cd-bounce-2-inverse 0.6s;
+			animation: cd-bounce-2-inverse 0.6s;
+		}
+		@media only screen and(min-width: 1170px) {
+			&:nth-child(odd) .cd-timeline-content.bounce-in {
+				-webkit-animation: cd-bounce-2 0.6s;
+				-moz-animation: cd-bounce-2 0.6s;
+				animation: cd-bounce-2 0.6s;
+			}
 		}
 	}
 }
